--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Sassly HTML5 Template">
 
-  <title>Talura</title>
+  <title>TalAura | Home</title>
 
   <!-- Fav Icon -->
   <link rel="icon" type="image/x-icon" href="../assets/imgs/logo/favicon.webp">
@@ -48,6 +48,7 @@
           <span data-text="T" class="characters">T</span>
           <span data-text="A" class="characters">A</span>
           <span data-text="L" class="characters">L</span>
+          <span data-text="A" class="characters">A</span>
           <span data-text="U" class="characters">U</span>
           <span data-text="R" class="characters">R</span>
           <span data-text="A" class="characters">A</span>
@@ -75,7 +76,7 @@
     <div class="offcanvas-area-meta-wrapper">
       <div class="offcanvas-btn-wrapper opacity-0">
         <a target="_blank" href="https://themeforest.net/item/axtra-digital-agency-creative-portfolio-theme/43074408"
-        class="wc-btn wc-btn-default btn-hover-cropping">Purchase now</a>
+          class="wc-btn wc-btn-default btn-hover-cropping">Purchase now</a>
       </div>
       <span id="close_offcanvas" class="close-offcanvas">
         <img src="assets/imgs/icon/close.png" alt="close">
@@ -84,8 +85,8 @@
     <div class="offcanvas-area-menu-wrapper">
       <ul id="accordion" class="accordion">
         <li><a href="/">Product</a></li>
-        <li><a href="https://talaura.ai/blog">Blogs</a></li>
-        <li><a href="/">News In Press</a></li>
+        <li><a href="contact.html">Blogs</a></li>
+        <li><a href="contact.html">News In Press</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
     </div>
@@ -115,9 +116,10 @@
     <div class="container">
       <div class="header-area__inner">
         <div class="header__logo">
-          <a href="index.html">
-            <img src="assets/imgs/logo/logo-2.webp" class="normal-logo" alt="Site Logo">
-            <img src="assets/imgs/logo/logo-13.webp" class="sticky-logo" alt="Site Logo">
+          <a href="index.html" class="text-black" style="font-size: 28px;font-weight: 400;">
+            <span style="color: #6BE4AB;font-size: 30px;" class="fw-bold company-letter">T</span>alAura
+            <!-- <img src="assets/imgs/logo/logo-2.webp" class="normal-logo" alt="Site Logo">
+            <img src="assets/imgs/logo/logo-13.webp" class="sticky-logo" alt="Site Logo"> -->
           </a>
         </div>
         <div class="header__nav">
@@ -125,8 +127,8 @@
             <ul>
               <li><a href="/">Product</a>
               </li>
-              <li><a href="http://talaura.ai/blog">Blogs</a></li>
-              <li><a href="news-in-press.html">News In Press</a></li>
+              <li><a href="contact.html">Blogs</a></li>
+              <li><a href="contact.html">News In Press</a></li>
               <li><a href="about.html">About</a></li>
             </ul>
           </nav>
@@ -161,7 +163,7 @@
                 <div class="section-content">
                   <div class="section-title-wrapper">
                     <div class="title-wrapper">
-                      <h1 class="section-title has_fade_anim lh-sm">Enabling Retail Sales & Hiring with Intelligence
+                      <h1 class="section-title has_fade_anim lh-sm mobile-text-center">Enabling Retail Sales & Hiring with Intelligence
                       </h1>
                     </div>
                   </div>
@@ -170,7 +172,7 @@
                       you to focus more on your business
                       or simply enjoy your newfound free time.</p>
                   </div> -->
-                  <div class="btn-wrapper has_fade_anim" data-delay="0.45">
+                  <div class="btn-wrapper has_fade_anim mobile-padding-top" data-delay="0.45">
                     <a href="#" class="wc-btn wc-btn-primary btn-text-flip primary-bg"> <span
                         data-text="Coming Soon">Coming Soon</span></a>
                     <a href="/contact.html" class="wc-btn wc-btn-primary bg-transparent border-0 enquiry-btn"> <span
@@ -180,7 +182,7 @@
                   </div>
 
                 </div>
-                <div class="hero-thumb">
+                <div class="hero-thumb mobile-margin-top">
                   <div class="shape-1">
                     <img src="assets/imgs/shape/shape-s-10.webp" alt="shape image">
                   </div>
@@ -223,13 +225,13 @@
           <!-- hero area end  -->
 
           <!-- features area start  -->
-          <section class="features-area section-spacing">
+          <section class="features-area section-spacing mobile-margin-top">
             <div class="container">
               <div class="features-area-inner">
-                <div class="section-header">
+                <div class="section-header mobile-margin-top-forty mobile-margin-bottom">
                   <div class="section-title-wrapper">
                     <div class="title-wrapper">
-                      <h2 class="section-title has_fade_anim">
+                      <h2 class="section-title has_fade_anim ">
                         Problem Statement
                       </h2>
                     </div>
@@ -237,7 +239,7 @@
                 </div>
                 <div class="section-content">
                   <div class="accordion-wrapper has_fade_anim d-flex justify-content-center align-items-center">
-                    <div class="accordion accordion-flush" id="accordionFlushExample">
+                    <div class="accordion accordion-flush mobile-margin-bottom-fifty" id="accordionFlushExample">
                       <div class="accordion-item">
                         <h2 class="accordion-header" id="flush-headingOne">
                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -284,7 +286,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="feature-thumb has_fade_anim">
+                  <div class="feature-thumb has_fade_anim mobile-margin-bottom-fifty">
                     <img src="assets/imgs/gallery/img-s-10.webp" alt="feature image">
                   </div>
                 </div>
@@ -296,7 +298,7 @@
           <!-- product area start  -->
           <section class="product-area section-spacing pb-0">
             <div class="container">
-              <div class="section-header">
+              <div class="section-header mobile-margin-top-forty mobile-margin-bottom">
                 <div class="section-title-wrapper">
                   <div class="title-wrapper">
                     <h2 class="section-title has_fade_anim text-center mb-40">
@@ -318,15 +320,15 @@
                   </div>
 
                 </div>
-                <div class="section-content">
+                <div class="section-content mobile-margin-top">
                   <div class="section-title-wrapper">
                     <div class="title-wrapper">
-                      <h1 class="section-title has_fade_anim mb-20" style="color: #6BE4AB;">Observe</h1>
-                      <h2 class="has_fade_anim">Gain 100% Visibility into Every Sales Conversation</h2>
+                      <h1 class="section-title has_fade_anim mb-20 mobile-text-center mobile-heading" style="color: #6BE4AB;">Observe</h1>
+                      <h2 class="has_fade_anim mobile-text-center mobile-padding-top">Gain 100% Visibility into Every Sales Conversation</h2>
                     </div>
                   </div>
-                  <div class="text-wrapper">
-                    <p class="text has_fade_anim">TalAura provides visibility into retail shop floor interactions
+                  <div class="text-wrapper mobile-padding-top">
+                    <p class="text has_fade_anim mobile-text-center">TalAura provides visibility into retail shop floor interactions
                       between sales staff and customers, delivering key insights to enhance performance and customer
                       satisfaction.
                     </p>
@@ -346,16 +348,16 @@
           <section class="team-video-area section-spacing">
             <div class="container">
               <div class="team-video-area-inner">
-                <div class="section-content">
+                <div class="section-content mobile-margin-top">
                   <div class="title-wrapper">
-                    <h1 class="section-title has_fade_anim mb-20" style="color: #6BE4AB;">Coach</h1>
-                    <h2 class="has_fade_anim">Transform Coaching,
+                    <h1 class="section-title has_fade_anim mb-20 mobile-text-center mobile-heading" style="color: #6BE4AB;">Coach</h1>
+                    <h2 class="has_fade_anim mobile-text-center mobile-padding-top">Transform Coaching,
                       <br>
                       Elevate Sales
                     </h2>
                   </div>
-                  <div class="text-wrapper">
-                    <p class="text has_fade_anim">Salespeople train with TalAura’s bite-sized modules, practicing on
+                  <div class="text-wrapper mobile-padding-top">
+                    <p class="text has_fade_anim mobile-text-center">Salespeople train with TalAura’s bite-sized modules, practicing on
                       AI-generated customers to improve weaknesses and get assessed on new skills.
                     </p>
                   </div>
@@ -375,28 +377,34 @@
           <div class="container">
             <div class="footer-area-inner">
               <div class="footer-widget-wrapper">
-                <div class="footer-logo">
-                  <img src="assets/imgs/logo/logo-4.webp" alt="site-logo">
+                <div class="footer-logo mobile-box-center">
+                  <a href="index.html" class="text-black" style="font-size: 28px;font-weight: 500;">
+                    <span style="color: #6BE4AB;font-size: 30px;" class="fw-bold company-letter">T</span>alAura
+                    <!-- <img src="assets/imgs/logo/logo-2.webp" class="normal-logo" alt="Site Logo">
+                    <img src="assets/imgs/logo/logo-13.webp" class="sticky-logo" alt="Site Logo"> -->
+                  </a>
+                  <!-- <img src="assets/imgs/logo/logo-4.webp" alt="site-logo"> -->
                 </div>
                 <div class="description-text">
                   <div class="text-wrapper">
-                    <p class="text">Sassly is a real early-stage software looking for an analytics platform that scales
-                      with you, check out our stage program.</p>
+                    <p class="text mobile-text-center">TalAura is a sales-tech start up, enabling offline retail sales with AI based
+                      solutions.
+                    </p>
                   </div>
                 </div>
               </div>
-              <div class="footer-widget-wrapper">
+              <div class="footer-widget-wrapper mobile-box-center">
                 <h2 class="title">Company</h2>
-                <ul class="footer-nav-list">
-                  <li><a href="/maintainence.html">Blogs</a></li>
-                  <li><a href="#">News In Press</a></li>
+                <ul class="footer-nav-list mobile-box-center">
+                  <li><a href="contact.html">Blogs</a></li>
+                  <li><a href="contact.html">News In Press</a></li>
                   <li><a href="/about.html">About</a></li>
                   <li><a href="/contact.html">Contact</a></li>
                 </ul>
               </div>
 
-            
-              <div class="footer-widget-wrapper">
+
+              <!-- <div class="footer-widget-wrapper">
                 <h2 class="title">Newsletter</h2>
                 <form action="#" class="subscribe-form">
                   <div class="input-field">
@@ -409,9 +417,9 @@
                     <label for="policy"> I agree with <span>privacy policy</span></label>
                   </div>
                 </form>
-              </div>
+              </div> -->
             </div>
-            <div class="copyright-area-inner">
+            <!-- <div class="copyright-area-inner">
               <ul class="social-links">
                 <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
                 <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
@@ -421,7 +429,7 @@
               <div class="copyright-text">
                 <p class="text">© 2022 <a href="https://crowdyflow.com/">Crowdyflow</a> Agency</p>
               </div>
-            </div>
+            </div> -->
           </div>
         </footer>
         <!-- footer area end  -->
