--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
       display: block;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0.75);
+      background: rgba(0, 0, 0, 0.80);
       z-index: 2;
       transition: 0.3s;
       opacity: 0;
@@ -121,6 +121,9 @@
       padding: 4px 10px;
       font-size: 1.6rem;
       font-weight: 600;
+      background-color: rgba(7, 32, 50,0.8);
+      width: 100%;
+      border-radius: 4px;
     }
 
     .second-name {
@@ -184,6 +187,7 @@
           <span data-text="T" class="characters">T</span>
           <span data-text="A" class="characters">A</span>
           <span data-text="L" class="characters">L</span>
+          <span data-text="A" class="characters">A</span>
           <span data-text="U" class="characters">U</span>
           <span data-text="R" class="characters">R</span>
           <span data-text="A" class="characters">A</span>
@@ -219,8 +223,8 @@
     <div class="offcanvas-area-menu-wrapper">
       <ul id="accordion" class="accordion">
         <li><a href="/">Product</a></li>
-        <li><a href="https://talaura.ai/blog">Blogs</a></li>
-        <li><a href="/">News In Press</a></li>
+        <li><a href="contact.html">Blogs</a></li>
+        <li><a href="contact.html">News In Press</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
     </div>
@@ -250,9 +254,10 @@
     <div class="container">
       <div class="header-area__inner">
         <div class="header__logo">
-          <a href="index.html">
-            <img src="assets/imgs/logo/logo-2.webp" class="normal-logo" alt="Site Logo">
-            <img src="assets/imgs/logo/logo-13.webp" class="sticky-logo" alt="Site Logo">
+          <a href="index.html" class="text-black" style="font-size: 28px;font-weight: 400;">
+            <span style="color: #6BE4AB;font-size: 30px;" class="fw-bold company-letter">T</span>alAura
+            <!-- <img src="assets/imgs/logo/logo-2.webp" class="normal-logo" alt="Site Logo">
+            <img src="assets/imgs/logo/logo-13.webp" class="sticky-logo" alt="Site Logo"> -->
           </a>
         </div>
         <div class="header__nav">
@@ -260,8 +265,8 @@
             <ul>
               <li><a href="/">Product</a>
               </li>
-              <li><a href="http://talaura.ai/blog">Blogs</a></li>
-              <li><a href="news-in-press.html">News In Press</a></li>
+              <li><a href="contact.html">Blogs</a></li>
+              <li><a href="contact.html">News In Press</a></li>
               <li><a href="about.html">About</a></li>
             </ul>
           </nav>
@@ -302,7 +307,7 @@
             <div class="wrapper">
               <div class="card">
                 <a href="https://www.linkedin.com/in/nitin-jain-17b82310" target="_blank"><img
-                    src="https://images.unsplash.com/photo-1425342605259-25d80e320565?auto=format&amp;fit=crop&amp;w=750&amp;q=80&amp;ixid=dW5zcGxhc2guY29tOzs7Ozs%3D" />
+                    src="./assets/imgs/founder/Nitin.jpeg" />
                   <div class="info">
 
                     <p class="fw-bold fs-6">Co-founder, OfBusiness | Co-founder Oxyzo</p>
@@ -314,12 +319,12 @@
                     <i class="fa-brands fa-linkedin fa-xl linkedin-icon"></i>
                   </div>
                   <p class="name">Nitin Jain</p>
-                  <p class="name second-name">IIT Delhi Silver Medalist</p>
+                  <p class="name second-name">Co Founder</p>
                 </a>
               </div>
               <div class="card">
                 <a href="https://www.linkedin.com/in/khattarkabir" target="_blank"><img
-                    src="https://images.unsplash.com/photo-1477666250292-1419fac4c25c?auto=format&amp;fit=crop&amp;w=667&amp;q=80&amp;ixid=dW5zcGxhc2guY29tOzs7Ozs%3D" />
+                    src="./assets/imgs/founder/Kabir.jpeg" />
                   <div class="info">
                     <p class="fw-bold fs-6">Ex-McKinsey | Ex-Head of Strategy, Ratio</p>
                     <p>Kabir is a StraOps consultant turned operator. He has scaled multiple consumer tech products and
@@ -327,14 +332,14 @@
                     <i class="fa-brands fa-linkedin fa-xl linkedin-icon"></i>
                   </div>
                   <p class="name">Kabir Khattar</p>
-                  <p class="name second-name">IIM Lucknow</p>
+                  <p class="name second-name">Co Founder</p>
                 </a>
               </div>
 
 
               <div class="card">
                 <a href="https://www.linkedin.com/in/syed-shaaz-548950bb" target="_blank"><img
-                    src="https://images.unsplash.com/photo-1477666250292-1419fac4c25c?auto=format&amp;fit=crop&amp;w=667&amp;q=80&amp;ixid=dW5zcGxhc2guY29tOzs7Ozs%3D" />
+                    src="./assets/imgs/founder/Syed.jpeg" />
                   <div class="info">
                     <p class="fw-bold fs-6">Ex-CEO & Founder, FTL</p>
                     <p>Shaaz is a tech entrepreneur and public speaker specializing in the AI/ML domain. He has authored
@@ -342,12 +347,12 @@
                     <i class="fa-brands fa-linkedin fa-xl linkedin-icon"></i>
                   </div>
                   <p class="name">Syed Shaaz</p>
-                  <p class="name second-name">VIT, Vellore</p>
+                  <p class="name second-name">Co Founder</p>
                 </a>
               </div>
               <div class="card">
                 <a href="https://www.linkedin.com/in/vikas-bansal-5576683" target="_blank"><img
-                    src="https://images.unsplash.com/photo-1425342605259-25d80e320565?auto=format&amp;fit=crop&amp;w=750&amp;q=80&amp;ixid=dW5zcGxhc2guY29tOzs7Ozs%3D" />
+                    src="./assets/imgs/founder/Vikas.jpeg" />
                   <div class="info">
                     <p class="fw-bold fs-6">Ex-CHRO Edelweiss, Unilever, Dr. Reddy’s</p>
                     <p>Vikas is an HR veteran with 24 years of experience in the industry. He has managed diverse
@@ -356,7 +361,7 @@
                     <i class="fa-brands fa-linkedin fa-xl linkedin-icon"></i>
                   </div>
                   <p class="name">Vikas Bansal</p>
-                  <p class="name second-name">SIBM Pune</p>
+                  <p class="name second-name">Co Founder</p>
                 </a>
               </div>
 
@@ -371,29 +376,35 @@
           <div class="container">
             <div class="footer-area-inner">
               <div class="footer-widget-wrapper">
-                <div class="footer-logo">
-                  <img src="assets/imgs/logo/logo-4.webp" alt="site-logo">
+                <div class="footer-logo mobile-box-center">
+                  <a href="index.html" class="text-white" style="font-size: 28px;font-weight: 500;">
+                    <span style="color: #6BE4AB;font-size: 30px;" class="fw-bold company-letter">T</span>alAura
+                    <!-- <img src="assets/imgs/logo/logo-2.webp" class="normal-logo" alt="Site Logo">
+                    <img src="assets/imgs/logo/logo-13.webp" class="sticky-logo" alt="Site Logo"> -->
+                  </a>
+                  <!-- <img src="assets/imgs/logo/logo-4.webp" alt="site-logo"> -->
                 </div>
                 <div class="description-text">
                   <div class="text-wrapper">
-                    <p class="text">Sassly is a real early-stage software looking for an analytics platform that scales
-                      with you, check out our stage program.</p>
+                    <p class="text mobile-text-center">TalAura is a sales-tech start up, enabling offline retail sales with AI based
+                      solutions.
+                    </p>
                   </div>
                 </div>
               </div>
-              <div class="footer-widget-wrapper">
-                <h2 class="title text-light">Company</h2>
-                <ul class="footer-nav-list">
-                  <li><a href="http://talaura.ai/blog">Blogs</a></li>
-                  <li><a href="#">News In Press</a></li>
+              <div class="footer-widget-wrapper mobile-box-center">
+                <h2 class="title text-white">Company</h2>
+                <ul class="footer-nav-list mobile-box-center">
+                  <li><a href="contact.html">Blogs</a></li>
+                  <li><a href="contact.html">News In Press</a></li>
                   <li><a href="/about.html">About</a></li>
                   <li><a href="/contact.html">Contact</a></li>
                 </ul>
               </div>
 
 
-              <div class="footer-widget-wrapper">
-                <h2 class="title text-light">Newsletter</h2>
+              <!-- <div class="footer-widget-wrapper">
+                <h2 class="title">Newsletter</h2>
                 <form action="#" class="subscribe-form">
                   <div class="input-field">
                     <input type="email" placeholder="Enter your email">
@@ -405,9 +416,9 @@
                     <label for="policy"> I agree with <span>privacy policy</span></label>
                   </div>
                 </form>
-              </div>
+              </div> -->
             </div>
-            <div class="copyright-area-inner">
+            <!-- <div class="copyright-area-inner">
               <ul class="social-links">
                 <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
                 <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
@@ -417,10 +428,10 @@
               <div class="copyright-text">
                 <p class="text">© 2022 <a href="https://crowdyflow.com/">Crowdyflow</a> Agency</p>
               </div>
-            </div>
+            </div> -->
           </div>
         </footer>
-        <!-- footer area end  -->
+      
 
       </div>
     </div>
