--- a/blog.html
+++ b/blog.html
@@ -37,12 +37,13 @@
       <div class="animation-preloader">
         <div class="spinner"></div>
         <div class="txt-loading">
-          <span data-text="S" class="characters">S</span>
+          <span data-text="T" class="characters">T</span>
           <span data-text="A" class="characters">A</span>
-          <span data-text="S" class="characters">S</span>
-          <span data-text="S" class="characters">S</span>
           <span data-text="L" class="characters">L</span>
-          <span data-text="Y" class="characters">Y</span>
+          <span data-text="A" class="characters">A</span>
+          <span data-text="U" class="characters">U</span>
+          <span data-text="R" class="characters">R</span>
+          <span data-text="A" class="characters">A</span>
         </div>
       </div>
       <div class="loader-section section-left"></div>
@@ -64,61 +65,18 @@
   <!-- offcanvas start  -->
   <div class="offcanvas-area">
     <div class="offcanvas-area-meta-wrapper">
-      <span id="close_offcanvas" class="close-offcanvas">
-        <img src="assets/imgs/icon/close.png" alt="close">
+      <span class="close-offcanvas">
       </span>
-      <div class="offcanvas-btn-wrapper">
-        <a target="_blank" href="https://themeforest.net/item/axtra-digital-agency-creative-portfolio-theme/43074408"
-          class="wc-btn wc-btn-default btn-hover-cropping">Purchase now</a>
+      <div class="offcanvas-btn-wrapper" id="close_offcanvas">
+        <img src="assets/imgs/icon/close.png" alt="close">
       </div>
     </div>
     <div class="offcanvas-area-menu-wrapper">
       <ul id="accordion" class="accordion">
-        <li>
-          <div class="link">Home <img class="angle-down" src="assets/imgs/icon/angle-down.png" alt="icon image">
-          </div>
-          <ul class="submenu">
-            <li><a href="ai-content-writer.html">AI Content Writer</a></li>
-            <li><a href="ai-image-generator.html">AI Image Generator</a></li>
-            <li><a href="ai-chatbot.html">AI Chatbot</a></li>
-            <li><a href="ai-seo.html">AI SEO Software</a></li>
-            <li><a href="ai-software.html">AI Startups</a></li>
-            <li><a href="ai-video-editor.html">AI Video Editor</a></li>
-            <li><a href="booking.html">Booking Software</a></li>
-            <li><a href="online-meeting.html">Virtual Meeting</a></li>
-            <li><a href="crm.html">CRM Software</a></li>
-            <li><a href="customer-service.html">Customer Support</a></li>
-            <li><a href="mobile-apps.html">Mobile App / SASS</a></li>
-            <li><a href="marketing-automation.html">Marketing automation</a></li>
-          </ul>
-        </li>
-        <li>
+        <li><a href="/">Product</a></li>
+        <li><a href="contact.html">Blogs</a></li>
+        <li><a href="contact.html">News In Press</a></li>
         <li><a href="about.html">About</a></li>
-        <li>
-          <div class="link">Pages<img class="angle-down" src="assets/imgs/icon/angle-down.png" alt="icon image"></div>
-          <ul class="submenu">
-            <li><a href="integration.html">integration</a></li>
-            <li><a href="integration-single.html">integration single</a></li>
-            <li><a href="about.html">about</a></li>
-            <li><a href="contact.html">contact</a></li>
-            <li><a href="404.html">404</a></li>
-            <li><a href="pricing.html">pricing</a></li>
-            <li><a href="faq.html">faq</a></li>
-            <li><a href="all-template.html">video templete</a></li>
-            <li><a href="team.html">team page</a></li>
-            <li><a href="privacy-policy.html">privacy policy</a></li>
-          </ul>
-        </li>
-        <li><a href="pricing.html">Pricing</a></li>
-        <li><a href="team.html">Team</a></li>
-        <li><a href="faq.html">FaQ</a></li>
-        <li>
-          <div class="link">Blog<img class="angle-down" src="assets/imgs/icon/angle-down.png" alt="icon image"></div>
-          <ul class="submenu">
-            <li><a href="blog.html">Our Blog</a></li>
-            <li><a href="blog-details.html">Blog Details</a></li>
-          </ul>
-        </li>
       </ul>
     </div>
   </div>
@@ -147,18 +105,19 @@
     <div class="container">
       <div class="header-area__inner">
         <div class="header__logo">
-          <a href="index.html">
-            <img src="assets/imgs/logo/logo-2.webp" class="normal-logo" alt="Site Logo">
-            <img src="assets/imgs/logo/logo-13.webp" class="sticky-logo" alt="Site Logo">
-          </a>
+          <a href="index.html" class="fs-3">
+            <span style="color: #6BE4AB;font-size: 30px;" class="fw-bold company-letter">T</span>alAura
+            <!-- <img src="assets/imgs/logo/logo-2.webp" class="normal-logo" alt="Site Logo">
+            <img src="assets/imgs/logo/logo-13.webp" class="sticky-logo" alt="Site Logo"> -->
+            </a>
         </div>
         <div class="header__nav">
           <nav class="main-menu">
             <ul>
               <li ><a href="/">Product</a>
               </li>
-              <li><a href="maintainence.html">Blogs</a></li>
-              <li><a href="news-in-press.html">News In Press</a></li>
+              <li><a href="contact.html">Blogs</a></li>
+              <li><a href="contact.html">News In Press</a></li>
               <li><a href="about.html">About</a></li>
             </ul>
           </nav>
@@ -326,32 +285,39 @@
         </main>
 
         <!-- footer area start  -->
-       <footer class="footer-area style-2" >
+        <footer class="footer-area style-2" style="background-color: #072032;">
           <div class="container">
             <div class="footer-area-inner">
               <div class="footer-widget-wrapper">
-                <div class="footer-logo">
-                  <img src="assets/imgs/logo/logo-4.webp" alt="site-logo">
+                <div class="footer-logo mobile-box-center">
+                  <a href="index.html" class="text-white" style="font-size: 28px;font-weight: 500;">
+                    <span style="color: #6BE4AB;font-size: 30px;" class="fw-bold company-letter">T</span>alAura
+                    <!-- <img src="assets/imgs/logo/logo-2.webp" class="normal-logo" alt="Site Logo">
+                    <img src="assets/imgs/logo/logo-13.webp" class="sticky-logo" alt="Site Logo"> -->
+                  </a>
+                  <!-- <img src="assets/imgs/logo/logo-4.webp" alt="site-logo"> -->
                 </div>
                 <div class="description-text">
                   <div class="text-wrapper">
-                    <p class="text">Sassly is a real early-stage software looking for an analytics platform that scales
-                      with you, check out our stage program.</p>
+                    <p class="text mobile-text-center">TalAura is a sales-tech start up, enabling offline retail sales with AI based
+                      solutions.
+                    </p>
                   </div>
                 </div>
               </div>
-              <div class="footer-widget-wrapper">
+              <div class="footer-widget-wrapper mobile-box-center">
                 <h2 class="title text-white">Company</h2>
-                <ul class="footer-nav-list">
-                  <li><a href="/maintainence.html">Blogs</a></li>
-                  <li><a href="#">News In Press</a></li>
-                  <li><a href="/about.html">About</a></li><li><a href="/contact.html">Contact</a></li>
+                <ul class="footer-nav-list mobile-box-center">
+                  <li><a href="contact.html">Blogs</a></li>
+                  <li><a href="contact.html">News In Press</a></li>
+                  <li><a href="/about.html">About</a></li>
+                  <li><a href="/contact.html">Contact</a></li>
                 </ul>
               </div>
 
-          
-              <div class="footer-widget-wrapper">
-                <h2 class="title text-light">Newsletter</h2>
+
+              <!-- <div class="footer-widget-wrapper">
+                <h2 class="title">Newsletter</h2>
                 <form action="#" class="subscribe-form">
                   <div class="input-field">
                     <input type="email" placeholder="Enter your email">
@@ -359,13 +325,13 @@
                     <span class="icon"><i class="fa-regular fa-envelope" style="font-size: 20px;"></i></span>
                   </div>
                   <div class="policy-field">
-                    <input type="checkbox" id="policy" name="policy" value="Boat" >
+                    <input type="checkbox" id="policy" name="policy" value="Boat" style="margin-left: 27px;">
                     <label for="policy"> I agree with <span>privacy policy</span></label>
                   </div>
                 </form>
-              </div>
+              </div> -->
             </div>
-            <div class="copyright-area-inner">
+            <!-- <div class="copyright-area-inner">
               <ul class="social-links">
                 <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
                 <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
@@ -375,9 +341,10 @@
               <div class="copyright-text">
                 <p class="text">© 2022 <a href="https://crowdyflow.com/">Crowdyflow</a> Agency</p>
               </div>
-            </div>
+            </div> -->
           </div>
         </footer>
+      
         <!-- footer area end  -->
 
       </div>
