--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,7 @@
           <span data-text="T" class="characters">T</span>
           <span data-text="A" class="characters">A</span>
           <span data-text="L" class="characters">L</span>
+          <span data-text="A" class="characters">A</span>
           <span data-text="U" class="characters">U</span>
           <span data-text="R" class="characters">R</span>
           <span data-text="A" class="characters">A</span>
@@ -75,8 +76,8 @@
     <div class="offcanvas-area-menu-wrapper">
       <ul id="accordion" class="accordion">
         <li><a href="/">Product</a></li>
-        <li><a href="https://talaura.ai/blog">Blogs</a></li>
-        <li><a href="/">News In Press</a></li>
+        <li><a href="contact.html">Blogs</a></li>
+        <li><a href="contact.html">News In Press</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
     </div>
@@ -106,18 +107,19 @@
     <div class="container">
       <div class="header-area__inner">
         <div class="header__logo">
-          <a href="index.html">
-            <img src="assets/imgs/logo/logo-2.webp" class="normal-logo" alt="Site Logo">
-            <img src="assets/imgs/logo/logo-13.webp" class="sticky-logo" alt="Site Logo" style="display: none;">
-          </a>
+          <a href="index.html" class="fs-3">
+            <span style="color: #6BE4AB;font-size: 30px;" class="fw-bold company-letter">T</span>alAura
+            <!-- <img src="assets/imgs/logo/logo-2.webp" class="normal-logo" alt="Site Logo">
+            <img src="assets/imgs/logo/logo-13.webp" class="sticky-logo" alt="Site Logo"> -->
+            </a>
         </div>
         <div class="header__nav">
           <nav class="main-menu">
             <ul>
               <li ><a href="/">Product</a>
               </li>
-              <li><a class="" href="http://talaura.ai/blog">Blogs</a></li>
-              <li><a href="news-in-press.html">News In Press</a></li>
+              <li><a href="contact.html">Blogs</a></li>
+              <li><a href="contact.html">News In Press</a></li>
               <li><a href="about.html">About</a></li>
             </ul>
           </nav>
@@ -150,15 +152,16 @@
                 <div class="section-header">
                   <div class="section-title-wrapper">
                     <div class="title-wrapper">
-                      <h1 class="section-title large has_fade_anim">Let’s get
+                      <h1 class="section-title large has_fade_anim desktop_view">Let’s get
                         in touch</h1>
+                      <h1 class="section-title large has_fade_anim mobile_view text-center">Let’s bring visibility to your sales floor</h1>
                     </div>
                   </div>
                   <div class="shape has_fade_anim" data-fade-from="left" data-delay="0.30">
                     <img src="assets/imgs/shape/shape-s-56.webp" alt="shape image">
                   </div>
                   <div class="text-wrapper">
-                    <p class="text has_fade_anim" data-delay="0.45">To bring visibility to your sales floor
+                    <p class="text has_fade_anim desktop_view" data-delay="0.45">To bring visibility to your sales floor
                     </p>
                   </div>
                 </div>
@@ -192,11 +195,15 @@
                 <div class="section-heading has_fade_anim">
                   <div class="section-title-wrapper">
                     <div class="title-wrapper">
-                      <h2 class="section-title">Let’s
+                      <h2 class="section-title desktop_view">Let’s
                         <span>contact</span>
                         for
                         better
                         result
+                      </h2>
+                      <h2 class="section-title mobile_view">
+                        <span>contact</span>
+                      us for more details
                       </h2>
                     </div>
                   </div>
@@ -245,32 +252,39 @@
         </main>
 
         <!-- footer area start  -->
-       <footer class="footer-area style-2" >
+        <footer class="footer-area style-2" style="background-color: #072032;">
           <div class="container">
             <div class="footer-area-inner">
               <div class="footer-widget-wrapper">
-                <div class="footer-logo">
-                  <img src="assets/imgs/logo/logo-4.webp" alt="site-logo">
+                <div class="footer-logo mobile-box-center">
+                  <a href="index.html" class="text-white" style="font-size: 28px;font-weight: 500;">
+                    <span style="color: #6BE4AB;font-size: 30px;" class="fw-bold company-letter">T</span>alAura
+                    <!-- <img src="assets/imgs/logo/logo-2.webp" class="normal-logo" alt="Site Logo">
+                    <img src="assets/imgs/logo/logo-13.webp" class="sticky-logo" alt="Site Logo"> -->
+                  </a>
+                  <!-- <img src="assets/imgs/logo/logo-4.webp" alt="site-logo"> -->
                 </div>
                 <div class="description-text">
                   <div class="text-wrapper">
-                    <p class="text">Sassly is a real early-stage software looking for an analytics platform that scales
-                      with you, check out our stage program.</p>
+                    <p class="text mobile-text-center">TalAura is a sales-tech start up, enabling offline retail sales with AI based
+                      solutions.
+                    </p>
                   </div>
                 </div>
               </div>
-              <div class="footer-widget-wrapper">
+              <div class="footer-widget-wrapper mobile-box-center">
                 <h2 class="title text-white">Company</h2>
-                <ul class="footer-nav-list">
-                  <li><a href="/maintainence.html">Blogs</a></li>
-                  <li><a href="#">News In Press</a></li>
-                  <li><a href="/about.html">About</a></li><li><a href="/contact.html">Contact</a></li>
+                <ul class="footer-nav-list mobile-box-center">
+                  <li><a href="contact.html">Blogs</a></li>
+                  <li><a href="contact.html">News In Press</a></li>
+                  <li><a href="/about.html">About</a></li>
+                  <li><a href="/contact.html">Contact</a></li>
                 </ul>
               </div>
 
-          
-              <div class="footer-widget-wrapper">
-                <h2 class="title text-light">Newsletter</h2>
+
+              <!-- <div class="footer-widget-wrapper">
+                <h2 class="title">Newsletter</h2>
                 <form action="#" class="subscribe-form">
                   <div class="input-field">
                     <input type="email" placeholder="Enter your email">
@@ -282,9 +296,9 @@
                     <label for="policy"> I agree with <span>privacy policy</span></label>
                   </div>
                 </form>
-              </div>
+              </div> -->
             </div>
-            <div class="copyright-area-inner">
+            <!-- <div class="copyright-area-inner">
               <ul class="social-links">
                 <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
                 <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
@@ -294,9 +308,10 @@
               <div class="copyright-text">
                 <p class="text">© 2022 <a href="https://crowdyflow.com/">Crowdyflow</a> Agency</p>
               </div>
-            </div>
+            </div> -->
           </div>
         </footer>
+      
         <!-- footer area end  -->
 
       </div>
